--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ecoleta</title>
+  
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   <link href="/styles/main.css" rel="stylesheet" />
-  <title>Ecoleta</title>
+  <link href="/styles/home.css" rel="stylesheet" />
+  <link href="/styles/responsive.css" rel="stylesheet" />
 </head>
 <body>
 
