--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   <link href="/styles/main.css" rel="stylesheet" />
   <link href="/styles/home.css" rel="stylesheet" />
+  <link href="/styles/modal.css" rel="stylesheet" />
   <link href="/styles/responsive.css" rel="stylesheet" />
 </head>
 <body>
@@ -18,7 +19,7 @@
   
       <header>
         <img src="/assets/logo.svg" alt="Logomarca" />
-        <a href="http://google.com.br">
+        <a href="/create-point.html">
           <span></span>
           Cadastre um ponto de coleta</a>
       </header>
@@ -32,6 +33,26 @@
     </div>
 
   </div>
+
+  <div id="modal" class="hide">
+    <div class="content">
+      <div class="header">
+        <h1>Pontos de Coleta</h1>
+        <a href="#">Fechar</a>
+      </div>
+      <form action="/search-results.html">
+        <label for="search">Cidade</label>
+        <div class="search field">
+          <input type="text" name="search" placeholder="Pesquise por cidade"/>
+          <button>
+            <img src="/assets/search.svg" alt="Buscar" />
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script src="/scripts/index.js"></script>
 
 </body>
 </html>
